--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-oauth.client.id=4c5acbac-808f-4b0f-83ee-4b45eac0675a
-oauth.client.secret=b9634c29-cac0-4a18-8e10-16c31b2b5537
+oauth.client.id=ui-test
+oauth.client.secret=ui-secret
 oauth.client.scope=profile email
 oauth.client.connectionTimeout=5000
 oauth.client.readTimeout=5000
